Add exit code on clone issues

--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -171,10 +171,15 @@ GHORG_IGNORE_PATH:
 # flag (--quiet)
 GHORG_QUIET: false
 
-# Allows you to control the exit code when ghorg runs into a problem cloning a repo from the remote.
-# For automation you may want to exit 1 if any repo fails to clone.
+# Allows you to control the exit code when ghorg runs into a problem (info level message) cloning a repo from the remote.
+# Info messages will appear after a clone is complete, similar to success messages
 # flag (--exit-code-on-clone-infos)
 GHORG_EXIT_CODE_ON_CLONE_INFOS: 0
+
+# Allows you to control the exit code when ghorg runs into a problem (issue level message) cloning a repo from the remote.
+# Issue messages will appear after a clone is complete, similar to success messages.
+# flag (--exit-code-on-clone-issues)
+GHORG_EXIT_CODE_ON_CLONE_ISSUES: 1
 
 # Specifies the location of your ghorg conf.yaml, allowing you to have many configuration files, or none at all
 # default: ghorg looks in $HOME/.config/ghorg/conf.yaml, if not set in that location nor as a commandline flag, ghorg will use all default values
