Add ghorg reclone command

--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -102,6 +102,11 @@ GHORG_FETCH_ALL: false
 # flag (--ghorgignore-path)
 GHORG_IGNORE_PATH:
 
+# If set allows you to specify the location of your reclone.yaml
+# Defaults to $HOME/.config/ghorg/reclone.yaml
+# flag (--reclone-path)
+GHORG_RECLONE_PATH:
+
 # Only emit critical output.
 # flag (--quiet)
 GHORG_QUIET: false
