Update gitlab local setup (#227)

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,12 +20,12 @@ jobs:
       run: go test -v ./...
     - name: Build
       run: go build -v -o ghorg .
-    - name: Run GitHub Integration Tests
-      run: scripts/github_integration_tests.sh
+    - name: Run GitHub Cloud Integration Tests
+      run: scripts/github_cloud_integration_tests.sh
       env:
         GITHUB_TOKEN: ${{ secrets.GHORG_GITHUB_TOKEN }}
-    - name: Run Bitbucket Integration Tests
-      run: scripts/bitbucket_integration_tests.sh
+    - name: Run Bitbucket Cloud Integration Tests
+      run: scripts/bitbucket_cloud_integration_tests.sh
       env:
         BITBUCKET_TOKEN: ${{ secrets.GHORG_BITBUCKET_APP_PASSWORD }}
         BITBUCKET_USERNAME: ${{ secrets.GHORG_BITBUCKET_USERNAME }}
@@ -53,7 +53,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GHORG_GITHUB_TOKEN }}
     - name: Run Bitbucket Integration Tests
-      run: scripts/bitbucket_integration_tests.sh
+      run: scripts/bitbucket_cloud_integration_tests.sh
       env:
         BITBUCKET_TOKEN: ${{ secrets.GHORG_BITBUCKET_APP_PASSWORD }}
         BITBUCKET_USERNAME: ${{ secrets.GHORG_BITBUCKET_USERNAME }}
