--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,7 +30,7 @@ jobs:
         BITBUCKET_TOKEN: ${{ secrets.GHORG_BITBUCKET_APP_PASSWORD }}
         BITBUCKET_USERNAME: ${{ secrets.GHORG_BITBUCKET_USERNAME }}
     - name: Run GitLab Cloud Integration Tests
-      run: scripts/gitlab_cloud_integration_tests.bat
+      run: scripts/gitlab_cloud_integration_tests.sh
       env:
         GITLAB_TOKEN: ${{ secrets.GHORG_GITLAB_TOKEN }}
   build_and_test_windows:
@@ -62,6 +62,6 @@ jobs:
         BITBUCKET_TOKEN: ${{ secrets.GHORG_BITBUCKET_APP_PASSWORD }}
         BITBUCKET_USERNAME: ${{ secrets.GHORG_BITBUCKET_USERNAME }}
     - name: Run GitLab Cloud Integration Tests
-      run: scripts/gitlab_cloud_integration_tests.bat
+      run: scripts/gitlab_cloud_integration_tests.sh
       env:
         GITLAB_TOKEN: ${{ secrets.GHORG_GITLAB_TOKEN }}
