Add gitlab cloud integration test (#233)

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,6 +29,10 @@ jobs:
       env:
         BITBUCKET_TOKEN: ${{ secrets.GHORG_BITBUCKET_APP_PASSWORD }}
         BITBUCKET_USERNAME: ${{ secrets.GHORG_BITBUCKET_USERNAME }}
+    - name: Run GitLab Cloud Integration Tests
+      run: scripts/gitlab_cloud_integration_tests.sh
+      env:
+        GITLAB_TOKEN: ${{ secrets.GHORG_GITLAB_TOKEN }}
   build_and_test_windows:
     name: Build and Test Windows
     runs-on: windows-latest
@@ -57,3 +61,7 @@ jobs:
       env:
         BITBUCKET_TOKEN: ${{ secrets.GHORG_BITBUCKET_APP_PASSWORD }}
         BITBUCKET_USERNAME: ${{ secrets.GHORG_BITBUCKET_USERNAME }}
+    - name: Run GitLab Cloud Integration Tests
+      run: scripts/gitlab_cloud_integration_tests.sh
+      env:
+        GITLAB_TOKEN: ${{ secrets.GHORG_GITLAB_TOKEN }}
