--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -40,6 +40,13 @@ GHORG_SCM_BASE_URL:
 # flag (--include-submodules)
 GHORG_INCLUDE_SUBMODULES: false
 
+# Allows you to pass arguments to git's filter flag e.g. git clone --filter=<args> this requires git version 2.19 or greater.
+# Useful for filtering out binary objects from repos
+# Few caveats, only works on inital clones, however if done on inital clone all subsequent clones will also honor the settings.
+# More info at https://stackoverflow.com/questions/49917616/what-is-the-git-clone-filter-options-syntax
+# flag (--git-filter) eg: --git-filter=blob:none
+GHORG_GIT_FILTER:
+
 # Deletes all files/directories found in your local clone directory that are not found on the remote (e.g., after remote deletion).  With GHORG_SKIP_ARCHIVED set, archived repositories will also be pruned from your local clone.
 # Will prompt before deleting any files unless used in combination with --prune-no-confirm
 # flag (--prune)
