Add jekyll site

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
-          source: ../../../README.md
+          source: ../../../site
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
