--- a/site/_config.yml
+++ b/site/_config.yml
@@ -23,7 +23,7 @@ title: ghorg
 description: >- # this means to ignore newlines until "baseurl:"
   Quickly clone an entire org/users repositories into one directory - Supports GitHub, GitLab, Bitbucket, and more 🥚
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://gabrie30.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username: gabrie30
 
