--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -2,8 +2,10 @@ name: goreleaser
 
 on:
   push:
+    branches:
+      - master
     tags:
-      - '*'
+      - 'v*'
   workflow_dispatch:
 
 permissions:
@@ -25,7 +27,7 @@ jobs:
           go-version: 1.18
       -
         name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2
+        uses: goreleaser/goreleaser-action@v2.8.0
         with:
           distribution: goreleaser
           version: latest
