--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,6 +3,7 @@ name: Go
 on: [push, pull_request]
 jobs:
   build_and_test:
+    environment: actions
     name: Build and Test
     runs-on: ${{ matrix.os }}
     strategy:
@@ -34,6 +35,7 @@ jobs:
       env:
         GITLAB_TOKEN: ${{ secrets.GHORG_GITLAB_TOKEN }}
   build_and_test_windows:
+    environment: actions
     name: Build and Test Windows
     runs-on: windows-latest
     steps:
