--- a/sample-reclone.yaml
+++ b/sample-reclone.yaml
@@ -5,12 +5,13 @@
 # Example format below. You can reclone, one, multiple or all at once e.g.
 # ghorg reclone (will call all clone cmd's)
 # ghorg reclone gitlab-examples kubernetes-sig (will call both clone cmds)
-# Note: tokens used in cmd's will be sanitized before being logged to stdout
+# Note: tokens used in cmd's will be sanitized before being logged to stdout except when running `ghorg reclone --list`
 # See https://github.com/gabrie30/ghorg#reclone-command for more information
 
 # Example of basic structure
 # name-of-reclone:
 #   cmd: "ghorg clone command here"
+#   description: "Optional description that will be printed to stdout when running `ghorg reclone --list`"
 
 # Example for gitlab; update with your gitlab cloud token
 gitlab-examples:
@@ -21,5 +22,7 @@ kubernetes:
   cmd: "ghorg clone kubernetes --token=XXXXXXX"
 kubernetes-sig:
   cmd: "ghorg clone kubernetes --token=XXXXXXX --match-regex=^sig- --output-dir=kubernetes-sig-only"
+  description: "Clones the kubernetes org and only repos that match the regex ^sig- and puts them in a new directory called kubernetes-sig-only"
 kubernetes-sig-staging:
   cmd: "ghorg clone kubernetes --token=XXXXXXX --topics=k8s-sig-staging --output-dir=kubernetes-sig-staging"
+  description: "Clones the kubernetes org and only repos that have the topic k8s-sig-staging and puts them in a new directory called kubernetes-sig-staging"
