Configured existing wf to run docker on push and tags

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,6 +34,7 @@ jobs:
       run: scripts/gitlab_cloud_integration_tests.sh
       env:
         GITLAB_TOKEN: ${{ secrets.GHORG_GITLAB_TOKEN }}
+
   build_and_test_windows:
     environment: actions
     name: Build and Test Windows
@@ -67,3 +68,11 @@ jobs:
       run: scripts/gitlab_cloud_integration_tests.sh
       env:
         GITLAB_TOKEN: ${{ secrets.GHORG_GITLAB_TOKEN }}
+
+  docker:
+    needs: [build_and_test, build_and_test_windows]
+    uses: ./.github/workflows/docker.yml
+    permissions:
+      packages: write
+    with:
+      is_release: false
