Configured for arch linux/arm64 and linux/amd64

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -54,8 +54,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          # platforms: linux/arm64,linux/amd64
-          platforms: linux/amd64
+          platforms: linux/arm64,linux/amd64
           push: true
           tags: |
             ghcr.io/${{ github.repository }}:${{ env.docker_latest_tag }}
