--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -6,13 +6,12 @@ on:
       - 'v*'
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
   goreleaser:
     environment: actions
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       -
         name: Checkout
@@ -32,3 +31,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GHORG_GITHUB_TOKEN }}
 
+  docker:
+    uses: ./.github/workflows/docker.yml
+    permissions:
+      packages: write
+    with:
+      is_release: true
