--- a/.github/workflows/gitlab-integration-test.yml
+++ b/.github/workflows/gitlab-integration-test.yml
@@ -9,4 +9,6 @@ jobs:
     - name: Set up Docker
       uses: docker-practice/actions-setup-docker@master
     - name: Run GitLab Integration Test
-      run: ./scripts/local-gitlab/start-ee.sh
+      run: |
+        export ENV=ci
+        ./scripts/local-gitlab/start-ee.sh
