--- a/.github/workflows/gitlab-integration-test.yml
+++ b/.github/workflows/gitlab-integration-test.yml
@@ -4,11 +4,21 @@ jobs:
   gitlab_integration_test:
     runs-on: ubuntu-latest
     steps:
-    - name: Check out code
-      uses: actions/checkout@v2
-    - name: Set up Docker
-      uses: docker-practice/actions-setup-docker@master
-    - name: Run GitLab Integration Test
-      run: |
-        export ENV=ci
-        ./scripts/local-gitlab/start-ee.sh
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: "^1.20"
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Install Go dependencies and build the project
+        run: |
+          go mod download
+          go install .
+      - name: Add Go binaries to PATH
+        run: echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+      - name: Set up Docker
+        uses: docker-practice/actions-setup-docker@master
+      - name: Run GitLab Integration Test
+        run: |
+          export ENV=ci
+          ./scripts/local-gitlab/start-ee.sh
