--- a/.github/workflows/gitlab-integration-test.yml
+++ b/.github/workflows/gitlab-integration-test.yml
@@ -18,7 +18,10 @@ jobs:
         run: echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
       - name: Set up Docker
         uses: docker-practice/actions-setup-docker@master
+      - name: Add hosts to /etc/hosts
+        run: |
+          sudo echo "127.0.0.1 gitlab.example.com" | sudo tee -a /etc/hosts
       - name: Run GitLab Integration Test
         run: |
-          export ENV=ci
+          echo "Using ghorg version: $(ghorg version)"
           ./scripts/local-gitlab/start-ee.sh
