Add no dir size flag

--- a/sample-conf.yaml
+++ b/sample-conf.yaml
@@ -151,6 +151,11 @@ GHORG_EXIT_CODE_ON_CLONE_ISSUES: 1
 # flag (--no-token)
 GHORG_NO_TOKEN: false
 
+# Skips the calculation of the output directory size at the end of a clone operation.
+# This can save time, especially when cloning a large number of repositories.
+# flag (--no-dir-size)
+GHORG_NO_DIR_SIZE: false
+
 # Specifies the location of your ghorg conf.yaml, allowing you to have many configuration files, or none at all
 # default: ghorg looks in $HOME/.config/ghorg/conf.yaml, if not set in that location nor as a commandline flag, ghorg will use all default values
 # NOTE: this cannot be set in the configuration file. Its supported through CLI flag and ENV var only.
